--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "league/glide-laravel": "^1.0",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-menu": "^4.1",
+        "spatie/laravel-permission": "^6.3",
         "yajra/laravel-datatables": "^10.1"
     },
     "require-dev": {
