backend: removed cache data based localization. added cookie based localization. added DEBUGBAR_ENABLED=false to disable debugbar from backend

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ DB_PORT=3306
 DB_DATABASE=larabone
 DB_USERNAME=root
 DB_PASSWORD=
-
+DEBUGBAR_ENABLED=false
 DEFAULT_AVATAR=/assets/images/avatar/avatar.jpg
 
 BROADCAST_DRIVER=log
