--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/ui": "^4.4",
         "league/glide-laravel": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-menu": "^4.1",
         "spatie/laravel-permission": "^6.3",
         "yajra/laravel-datatables": "^10.1"
