--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "axios": "^1.6.4",
         "bootstrap": "^5.2.3",
         "laravel-datatables-vite": "^0.5.2",
+        "laravel-echo": "^1.15.3",
         "laravel-vite-plugin": "^1.0.0",
+        "pusher-js": "^8.4.0-rc2",
         "sass": "^1.56.1",
         "vite": "^5.0.0"
     },
     "dependencies": {
         "jquery": "^3.7.1",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "vite-plugin-env-compatible": "^2.0.1"
     }
 }
