--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_NAME=Laravel
+APP_NAME=Larabone
+APP_LOGO=/logo.png
 APP_ENV=local
 APP_KEY=base64:PNUXdEBc7/Mz98WlGFwRmADO4sEMkFS1SNLaA+Ge9bo=
 APP_DEBUG=true
@@ -59,3 +60,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+EMAIL_SUPPORT=
+CONTACT_NUMBER=
+STREET=
+CITY=
+COUNTRY=
