--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "barryvdh/laravel-snappy": "^1.0",
         "bunker/laravel-localization": "^1.0",
-        "bunker/support-ticket": "^1.0",
         "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -41,7 +40,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Bunker\\SupportTicket\\": "package/support-ticket/src/"
         }
     },
     "autoload-dev": {
