--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "bootstrap-datepicker": "^1.10.0",
         "jquery": "^3.7.1",
         "lodash": "^4.17.21",
         "sweetalert2": "^10.16.11",
