--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "Bunker\\SupportTicket\\": "package/support-ticket/src/",
-            "Bunker\\LaravelSpeedDate\\": "package/laravel-speed-date/src/",
-            "Bunker\\TourismBooking\\": "package/tourism-booking/src/"
+            "Bunker\\SupportTicket\\": "package/support-ticket/src/"
         }
     },
     "autoload-dev": {
