updated setup views

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
 APP_NAME="Larabone"
 APP_LOGO=logo.png
-APP_KEY=base64:+sgzJvotqJyaMcITN04kAiPo9CvnrOiOZMLM1sSU3a0=
+APP_KEY=base64:5jixto6PTDJbsXIP+M9i5cA8+kAOwzP3zhXG8TvoIj8=
 APP_URL=http://localhost
 DEFAULT_AVATAR=/assets/images/avatar/avatar.jpg
-EMAIL_SUPPORT=support@domain.tld
-CONTACT_NUMBER=+8801811000000
 STREET="20/22 Kaminari, Sonngard"
 CITY=Khulna
 COUNTRY=Bangladesh
@@ -24,11 +22,11 @@ DB_DATABASE=larabone
 DB_USERNAME=larabone
 DB_PASSWORD="secret"
 
-BUSINESS_EMAIL=
-BUSINESS_NUMBER=
-BUSINESS_STREET=
-BUSINESS_CITY=
-BUSINESS_COUNTRY=
+BUSINESS_EMAIL=support@domain.tld
+BUSINESS_NUMBER=+8801811000000
+BUSINESS_STREET="20/22 Kaminari, Sonngard"
+BUSINESS_CITY=Khulna
+BUSINESS_COUNTRY=Bangladesh
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -44,11 +42,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=e80765ea6a73a1
+MAIL_PASSWORD="0acb02c53edb07"
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
